# moloch

./: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: INDEX.md  MASTER_SPECIFICATION.md
docs/archive/: AGENT_QUICKSTART_v1.md  ROADMAP.md
docs/developer/: AGENT_ACCOUNTABILITY_REMEDIATION.md  OSS_RELEASE_ROADMAP.md  SPEC_COMPLIANCE_AUDIT.md  SPEC_GAPS.md  api.md  architecture.md  configuration.md  deployment.md  operations.md  quickstart.md  security.md
docs/diagrams/: anchoring-sequence.md  consensus-sequence.md  data-flow.md  sync-sequence.md
docs/llm/: api.sigil  architecture.sigil  quickstart.sigil  security.sigil
docs/specs/: AGENT_ACCOUNTABILITY.md  AGENT_ACCOUNTABILITY_TDD.md
examples/: Cargo.toml  basic_event.rs  holocrypt_privacy.rs  mmr_proofs.rs
moloch-anchor/: Cargo.toml
moloch-anchor-bitcoin/: Cargo.toml
moloch-anchor-bitcoin/src/: config.rs  error.rs  lib.rs  provider.rs  rpc.rs  tx.rs
moloch-anchor-ethereum/: Cargo.toml
moloch-anchor-ethereum/src/: config.rs  error.rs  lib.rs  provider.rs
moloch-anchor/src/: commitment.rs  errors.rs  lib.rs  manager.rs  mock.rs  proof.rs  provider.rs  registry.rs  scheduler.rs
moloch-api/: Cargo.toml
moloch-api/src/: auth.rs  lib.rs  rest.rs  server.rs  ws.rs
moloch-bench/: Cargo.toml
moloch-bench/benches/: chain_benchmarks.rs  core_benchmarks.rs  crypto_benchmarks.rs  mempool_benchmarks.rs  mmr_benchmarks.rs  storage_benchmarks.rs
moloch-bench/src/: lib.rs
moloch-chain/: Cargo.toml
moloch-chain/src/: concurrent_mempool.rs  lib.rs  mempool.rs  producer.rs  state.rs  validators.rs
moloch-consensus/: Cargo.toml
moloch-consensus/src/: finality.rs  lib.rs  round.rs  votes.rs
moloch-core/: Cargo.toml
moloch-core/src/: aligned.rs  arena.rs  block.rs  crypto.rs  error.rs  event.rs  lib.rs  merkle.rs  proof.rs  proptest.rs  rkyv_types.rs
moloch-core/src/agent/: attestation.rs  audit_bridge.rs  capability.rs  causality.rs  coordination.rs  emergency.rs  event_types.rs  hitl.rs  id.rs  mod.rs  outcome.rs  principal.rs  reasoning.rs  registry.rs  session.rs  timestamp.rs
moloch-core/tests/: agent_adversarial.rs  agent_integration.rs
moloch-federation/: Cargo.toml
moloch-federation/src/: bridge.rs  chain.rs  errors.rs  lib.rs  proof.rs  registry.rs  routing.rs
moloch-holocrypt/: Cargo.toml
moloch-holocrypt/benches/: holocrypt_bench.rs
moloch-holocrypt/src/: agile.rs  composite.rs  encrypted.rs  errors.rs  frost.rs  lib.rs  pqc.rs  proofs.rs  threshold.rs
moloch-index/: Cargo.toml
moloch-index/src/: indexes.rs  lib.rs  proofs.rs  query.rs
moloch-light/: Cargo.toml
moloch-light/src/: checkpoint.rs  client.rs  errors.rs  header.rs  lib.rs  proof.rs  sync.rs
moloch-mmr/: Cargo.toml
moloch-mmr/src/: lib.rs  mmr.rs  proptest.rs  store.rs
moloch-net/: Cargo.toml
moloch-net/src/: discovery.rs  lib.rs  protocol.rs  sync.rs  transport.rs
moloch-storage/: Cargo.toml
moloch-storage/src/: batch.rs  iter.rs  lib.rs  mmap.rs  rocks.rs  snapshot.rs  traits.rs
moloch-verify/: Cargo.toml
moloch-verify/src/: invariants.rs  lib.rs  properties.rs  runtime.rs  specs.rs
scripts/: pgo-build.sh
