[workspace]
resolver = "2"
members = [
    "moloch-core",
    "moloch-mmr",
    "moloch-storage",
    "moloch-chain",
    "moloch-index",
    "moloch-net",
    "moloch-consensus",
    "moloch-api",
    "moloch-holocrypt",
    "moloch-light",
    "moloch-federation",
    "moloch-verify",
    "moloch-anchor",
    "moloch-anchor-bitcoin",
    "moloch-anchor-ethereum",
    "moloch-bench",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Daemoniorum LLC"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Daemoniorum-LLC/moloch"
keywords = ["audit", "blockchain", "cryptography", "merkle", "zk-proofs"]
categories = ["cryptography", "data-structures"]

[workspace.dependencies]
# Core
thiserror = "2.0"
anyhow = "1.0"
derive_more = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.8" }

# Crypto - using Arcanum primitives with SIMD-accelerated native backend
arcanum-hash = { version = "0.1", default-features = false, features = ["std", "backend-native", "blake3"] }
arcanum-signatures = { version = "0.1", default-features = false, features = ["ed25519", "batch"] }
rayon = "1.10"
rand = "0.8"
hex = "0.4"

# Concurrency
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"

# Async
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Storage
rocksdb = "0.22"
memmap2 = "0.9"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.5"
tempfile = "3.14"

# Networking
url = "2.5"

# Ethereum
alloy = { version = "0.8", features = ["full", "provider-http", "signer-local", "network", "contract", "rpc-types"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bitcoincore-rpc = "0.19"

# Allocators
mimalloc = "0.1"
bumpalo = { version = "3.17", features = ["collections"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Profile-Guided Optimization profiles
# Usage:
#   1. Build with PGO instrumentation: cargo build --profile pgo-generate
#   2. Run benchmarks to collect profiles
#   3. Merge profiles: llvm-profdata merge -o merged.profdata /tmp/pgo-data
#   4. Build with PGO: LLVM_PROFILE_FILE=/dev/null cargo build --profile pgo-use

[profile.pgo-generate]
inherits = "release"
lto = "thin"  # Thin LTO for faster instrumentation builds
debug = 1     # Keep some debug info for profiling

[profile.pgo-use]
inherits = "release"
lto = "fat"
codegen-units = 1

# Optimized development profile (faster iteration during benchmarking)
[profile.dev-opt]
inherits = "dev"
opt-level = 2
debug = true

[profile.dev]
opt-level = 0
debug = true
