[package]
name = "moloch-anchor-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Bitcoin OP_RETURN anchoring provider for Moloch"

[features]
default = []
testnet = []
regtest = []

[dependencies]
moloch-core = { path = "../moloch-core", version = "0.1.0" }
moloch-anchor = { path = "../moloch-anchor", version = "0.1.0", features = ["mock"] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
bitcoincore-rpc = "0.19"

# Core
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
chrono.workspace = true
parking_lot.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
