[package]
name = "moloch-bench"
description = "Benchmarks for the Moloch audit chain"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Moloch crates
moloch-core = { path = "../moloch-core" }
moloch-mmr = { path = "../moloch-mmr" }
moloch-storage = { path = "../moloch-storage" }
moloch-chain = { path = "../moloch-chain" }
moloch-index = { path = "../moloch-index" }
moloch-holocrypt = { path = "../moloch-holocrypt" }

# Arcanum for crypto benchmarks (crates.io v0.1.1)
arcanum-holocrypt = { version = "0.1.1", features = ["full"] }
arcanum-pqc = "0.1.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Utilities
serde_json.workspace = true
bincode.workspace = true
chrono.workspace = true
tempfile.workspace = true
rand = "0.8"

# Allocator - mimalloc for improved performance
mimalloc.workspace = true

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "chain_benchmarks"
harness = false

[[bench]]
name = "mmr_benchmarks"
harness = false

[[bench]]
name = "mempool_benchmarks"
harness = false
