[package]
name = "moloch-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Chain operations for Moloch audit chain"

[dependencies]
# Internal
moloch-core = { path = "../moloch-core", version = "0.1.0" }
moloch-mmr = { path = "../moloch-mmr", version = "0.1.0" }
moloch-storage = { path = "../moloch-storage", version = "0.1.0" }

# Core
thiserror.workspace = true
derive_more.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Time
chrono.workspace = true

# Async
tokio.workspace = true

# Logging
tracing.workspace = true

# Hex encoding
hex.workspace = true

# Concurrency (lock-free mempool)
crossbeam.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
