[package]
name = "moloch-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PoA consensus for Moloch audit chain"

[dependencies]
moloch-core = { path = "../moloch-core" }
moloch-chain = { path = "../moloch-chain" }
moloch-storage = { path = "../moloch-storage" }

# Core
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
hex.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
