[package]
name = "moloch-federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-chain federation for cross-chain audit trails"

[dependencies]
moloch-core = { path = "../moloch-core", version = "0.1.0" }
moloch-mmr = { path = "../moloch-mmr", version = "0.1.0" }
moloch-light = { path = "../moloch-light", version = "0.1.0" }

thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
async-trait.workspace = true
tokio.workspace = true
dashmap.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
