[package]
name = "moloch-holocrypt"
description = "HoloCrypt integration for Moloch audit chain - encrypted events, ZK proofs, threshold access"
version.workspace = true
edition.workspace = true

[features]
default = ["full"]
full = ["encryption", "zkp", "threshold", "pqc"]
encryption = []
zkp = []
threshold = []
pqc = []

[dependencies]
# Moloch core
moloch-core = { path = "../moloch-core" }

# Arcanum cryptographic primitives (crates.io v0.1)
arcanum-holocrypt = { version = "0.1", features = ["full"] }
arcanum-core = { version = "0.1" }
arcanum-hash = { version = "0.1", default-features = false, features = ["std", "backend-native", "blake3"] }
arcanum-signatures = { version = "0.1", default-features = false, features = ["ed25519"] }
arcanum-symmetric = { version = "0.1" }
arcanum-threshold = { version = "0.1" }
arcanum-pqc = { version = "0.1" }
arcanum-zkp = { version = "0.1" }

# Core utilities
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
hex.workspace = true

# Async
tokio = { workspace = true, features = ["sync"] }

# Random
getrandom = "0.2"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
