[package]
name = "moloch-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Indexing and query layer for Moloch audit chain"

[dependencies]
# Internal
moloch-core = { path = "../moloch-core", version = "0.1.0" }
moloch-mmr = { path = "../moloch-mmr", version = "0.1.0" }
moloch-storage = { path = "../moloch-storage", version = "0.1.0" }

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
