[package]
name = "moloch-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Formal verification and runtime invariant checking for Moloch"

[dependencies]
moloch-core = { path = "../moloch-core", version = "0.1.0" }
moloch-mmr = { path = "../moloch-mmr", version = "0.1.0" }

thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
